# assume_true

./: README.md
example/: Cargo.toml  Makefile  README.md  bc_present.ll  bc_present_o1.ll  bc_removed.ll  example.ll
example/benches/: bench.rs
example/src/: lib.rs
forpaper/: Cargo.toml  README.md  bc_present.asm  bc_present.o1  bc_present.o3  bc_removed.o1  bc_removed.o3  hir-tree_rustc-02-11-2021  hir_tree  mir_rustc-02-11-2021  mir_tree  thir_tree
forpaper/benches/: bench.rs
forpaper/src/: lib.rs
harness/: Cargo.toml  Makefile
harness/src/: .lib.rs.swp  lib.rs  main.rs
iterator_bench/: Cargo.toml  Makefile  NOTES.md  NOTES2.md  README.md
iterator_bench/BCRM_lto_off/bench-deps/: bench-39d7527624da0a96
iterator_bench/BCRM_lto_off_rbc/bench-deps/: bench-39d7527624da0a96
iterator_bench/BCRM_rbc_in_rustflags_lto_off/bench-deps/: bench-39d7527624da0a96
iterator_bench/BCRM_rbc_in_rustflags_unspec/bench-deps/: bench-39d7527624da0a96
iterator_bench/BCRM_unspec/bench-deps/: bench-39d7527624da0a96
iterator_bench/BCRM_unspec_rbc/bench-deps/: bench-39d7527624da0a96
iterator_bench/NOBC_lto_off/bench-deps/: bench-39d7527624da0a96
iterator_bench/NOBC_lto_off/bench-deps-cgu=1/: bench-39d7527624da0a96
iterator_bench/NOBC_unspec/bench-deps/: bench-39d7527624da0a96
iterator_bench/benches/: bench.rs
iterator_bench/src/: lib.rs  main.rs
macro_def/: Cargo.toml
macro_def/src/: lib.rs
size_bench/: Cargo.toml  README.md
size_bench/benches/: bench.rs
size_bench/src/: lib.rs
