[package]
name = "example"
version = "0.1.0"
authors = ["np <nataliepopescu@gmail.com>"]
edition = "2018"

[lib]
#crate-type = ["dylib"]

[dependencies]
rand = "*"
macro_def = { path = "../macro_def/" }

[profile.bench]
debug = true

[[bench]]
name = "bench"
harness = false

[dev-dependencies.bencher]
version = "0.1.4"
